force-app/main/default/objects/followsup__c/followsup__c.object-meta.xml
<CustomObject>
    <label>followup</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>followups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>