force-app/main/default/objects/followsup__c/fields/bloodUrea__c.field-meta.xml
<CustomField>
    <fullName>bloodUrea__c</fullName>
    <label>bloodUrea</label>
    <length>200</length>
    <type>Text</type>
</CustomField>