force-app/main/default/objects/followsup__c/fields/bsl__c.field-meta.xml
<CustomField>
    <fullName>bsl__c</fullName>
    <label>bsl</label>
    <length>200</length>
    <type>Text</type>
</CustomField>