force-app/main/default/objects/followsup__c/fields/consultantId__c.field-meta.xml
<CustomField>
    <fullName>consultantId__c</fullName>
    <label>consultantId</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>