force-app/main/default/objects/followsup__c/fields/createdTime__c.field-meta.xml
<CustomField>
    <fullName>createdTime__c</fullName>
    <label>createdTime</label>
    <type>DateTime</type>
</CustomField>