force-app/main/default/objects/followsup__c/fields/doneFlag__c.field-meta.xml
<CustomField>
    <fullName>doneFlag__c</fullName>
    <label>doneFlag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>