force-app/main/default/objects/followsup__c/fields/followupDate__c.field-meta.xml
<CustomField>
    <fullName>followupDate__c</fullName>
    <label>followupDate</label>
    <type>Date</type>
</CustomField>