force-app/main/default/objects/followsup__c/fields/hb__c.field-meta.xml
<CustomField>
    <fullName>hb__c</fullName>
    <label>hb</label>
    <length>200</length>
    <type>Text</type>
</CustomField>