force-app/main/default/objects/followsup__c/fields/medicalCertificate__c.field-meta.xml
<CustomField>
    <fullName>medicalCertificate__c</fullName>
    <label>medicalCertificate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>