force-app/main/default/objects/followsup__c/fields/nextVisit__c.field-meta.xml
<CustomField>
    <fullName>nextVisit__c</fullName>
    <label>nextVisit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>