force-app/main/default/objects/followsup__c/fields/other1__c.field-meta.xml
<CustomField>
    <fullName>other1__c</fullName>
    <label>other1</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>