force-app/main/default/objects/followsup__c/fields/other2__c.field-meta.xml
<CustomField>
    <fullName>other2__c</fullName>
    <label>other2</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>