force-app/main/default/objects/followsup__c/fields/others__c.field-meta.xml
<CustomField>
    <fullName>others__c</fullName>
    <label>others</label>
    <length>200</length>
    <type>Text</type>
</CustomField>