force-app/main/default/objects/followsup__c/fields/potassium__c.field-meta.xml
<CustomField>
    <fullName>potassium__c</fullName>
    <label>potassium</label>
    <length>200</length>
    <type>Text</type>
</CustomField>