force-app/main/default/objects/followsup__c/fields/refById__c.field-meta.xml
<CustomField>
    <fullName>refById__c</fullName>
    <label>refById</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>