force-app/main/default/objects/followsup__c/fields/referringLetter__c.field-meta.xml
<CustomField>
    <fullName>referringLetter__c</fullName>
    <label>referringLetter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>