force-app/main/default/objects/followsup__c/fields/serumAlbumin__c.field-meta.xml
<CustomField>
    <fullName>serumAlbumin__c</fullName>
    <label>serumAlbumin</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>