force-app/main/default/objects/followsup__c/fields/serumCholesterol__c.field-meta.xml
<CustomField>
    <fullName>serumCholesterol__c</fullName>
    <label>serumCholesterol</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>