force-app/main/default/objects/followsup__c/fields/sodium__c.field-meta.xml
<CustomField>
    <fullName>sodium__c</fullName>
    <label>sodium</label>
    <length>200</length>
    <type>Text</type>
</CustomField>