force-app/main/default/objects/followsup__c/fields/srCreatinine__c.field-meta.xml
<CustomField>
    <fullName>srCreatinine__c</fullName>
    <label>srCreatinine</label>
    <length>200</length>
    <type>Text</type>
</CustomField>