force-app/main/default/objects/followsup__c/fields/thanksLetter__c.field-meta.xml
<CustomField>
    <fullName>thanksLetter__c</fullName>
    <label>thanksLetter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>