force-app/main/default/objects/followsup__c/fields/urine24HR__c.field-meta.xml
<CustomField>
    <fullName>urine24HR__c</fullName>
    <label>urine24HR</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>