force-app/main/default/objects/followsup__c/fields/urine__c.field-meta.xml
<CustomField>
    <fullName>urine__c</fullName>
    <label>urine</label>
    <length>200</length>
    <type>Text</type>
</CustomField>