force-app/main/default/objects/followsup__c/fields/urinePC__c.field-meta.xml
<CustomField>
    <fullName>urinePC__c</fullName>
    <label>urinePC</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>