force-app/main/default/objects/followsup__c/fields/urinePH__c.field-meta.xml
<CustomField>
    <fullName>urinePH__c</fullName>
    <label>urinePH</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>