force-app/main/default/objects/followsup__c/fields/urineProtein__c.field-meta.xml
<CustomField>
    <fullName>urineProtein__c</fullName>
    <label>urineProtein</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>