force-app/main/default/objects/followsup__c/fields/urineRBC__c.field-meta.xml
<CustomField>
    <fullName>urineRBC__c</fullName>
    <label>urineRBC</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>