force-app/main/default/objects/followsup__c/fields/usg__c.field-meta.xml
<CustomField>
    <fullName>usg__c</fullName>
    <label>usg</label>
    <length>200</length>
    <type>Text</type>
</CustomField>